crates/id_effect/tests/ui/invalid_provides.stderr
error: derive(ProviderSpec) requires #[provides(Service)] on the struct
 --> tests/ui/invalid_provides.rs:2:8
  |
2 | struct BadLive;
  |        ^^^^^^^
